# univyx-backend

./: .gitattributes  .gitignore  README.md  README.rst  dev.bat  pyproject.toml  requirement.txt
UnivyxApi/UnivyxApi/: asgi.py  urls.py  wsgi.py
UnivyxApi/UnivyxApi/settings/: settings.py
UnivyxApi/academics/models/: documents.py
UnivyxApi/entertainment/models/: __init__.py  articleModels.py
UnivyxApi/entertainment/views/: articlesView.py
core/: manage.py
core/UnivyxApi/: asgi.py  urls.py  wsgi.py
core/UnivyxApi/settings/: __init__.py  settings.base.py  settings.py
core/academics/: apps.py
core/academics/models/: events.py
core/accounts/: models.py
core/entertainment/: admin.py  apps.py  forms.py  urls.py
core/entertainment/migrations/: 0001_initial.py  0002_articlesmodel_read_time_alter_articlesmodel_image.py  0003_remove_eventsmodel_category_and_more.py  0004_remove_eventsmodel_attendees_and_more.py  0005_alter_eventsmodel_time.py  0006_eventsmodel_date_created.py  0007_article_bookmark_comment_event_news_and_more.py  0008_remove_comment_content_type_remove_comment_user_and_more.py  0009_article_public_id_event_public_id_news_public_id.py  0010_remove_news_likes.py  0011_alter_article_public_id_alter_event_public_id_and_more.py  0012_hottopics.py
core/entertainment/models/: __init__.py  articlesModel.py  eventsModels.py  newsModels.py
core/entertainment/repositories/: __init__.py  articlesRepository.py  (+2 more)
core/gaming/: urls.py
core/shared/: apps.py  consumers.py  models.py  permissions.py  serializers.py
core/store/: models.py
(+46 files in other folders)
